2009-02-23  Thomas H.P. Andersen  <phomes@gmail.com>

	* capplets/keyboard/gnome-keyboard-properties-xkbot.c:
	* capplets/keybindings/gnome-keybinding-properties.c:
	* capplets/keybindings/eggcellrendererkeys.h: Replaces deprecated: 
	gtk_box_pack_start_defaults, gtk_widget_set_usize, and GTK_CHECK_*. 
	Bug #572325

2009-02-22  Thomas H.P. Andersen  <phomes@gmail.com>

	* capplets/appearance/appearance-font.c:
	* capplets/mouse/gnome-mouse-properties.c:
	* typing-break/drw-utils.c: Replace deprecated GTK sybmols. Bug #572325

2009-02-18  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Jonas Bonn

	* font-viewer/font-thumbnailer.c: (main): initialize the type system.
	Fixes hangs when thumbnailing (bug #572189)

2009-02-09  Thomas H.P. Andersen  <phomes@gmail.com>

	* font-viewer/font-thumbnailer.c:
	* capplets/common/gconf-property-editor.c: Don't use deprecated 
	gdk_pixbuf_unref. Bug #570945

2009-02-04  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.25.91

==================== 2.25.90 ====================

2009-02-04  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* configure.in: version 2.25.90

2009-01-31  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: really make libcanberra-gtk optional

2009-01-31  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: modify test statement for better portability

2009-01-31  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Maxim Ermilov <zaspire@rambler.ru>

	* configure.in: add optional dependency on libcanberra-gtk for bug
	#169473

2009-01-25  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: don't define GNOME_DESKTOP_USE_UNSTABLE_API globally

2009-01-13  Luca Ferretti  <elle.uca@libero.it>

	* configure.in: 
	* capplets/network/*:
	Renamed from gnome-network-preferences to gnome-network-properties.
	Closes bug #554342

==================== 2.25.3 ====================

2008-12-18  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.25.3

2008-12-18  Bastien Nocera  <hadess@hadess.net>
