@@ -1,3 +1,8 @@
+2009-02-26  Thomas H.P. Andersen  <phomes@gmail.com>
+
+	* typing-break/drwright.c: Use GtkUIManager instead of deprecated 
+	GtkItemFactory. Bug #572325
+
 2009-02-23  Thomas H.P. Andersen  <phomes@gmail.com>
 
 	* capplets/keyboard/gnome-keyboard-properties-xkbot.c:
